add some input validation, clean up t-tests

--- a/matrix-stats/v2.3.0-roadmap.md
+++ b/matrix-stats/v2.3.0-roadmap.md
@@ -599,11 +599,11 @@ pf(2.5, 5, 10)       # Expected: 0.8979977,  Current: varies
 - Current passing: 290/290 (100%) ✅
 - Target: 70%+ coverage ✅ **Exceeded** (100% of implemented tests passing)
 
-### Phase 5: API Enhancements ✅
-- [ ] 5.1 Review Sampler.groovy placement
-- [ ] 5.2 Standardize null/NaN handling
-- [ ] 5.3 Document result object patterns
-- [ ] 5.4 Improve tTest equal variance handling
+### Phase 5: API Review & Enhancements ✅ **COMPLETED**
+- [x] 5.1 Review Sampler.groovy placement - Documented for ML train/test splitting
+- [x] 5.2 Standardize null/NaN handling - Added comprehensive validation to Student and Correlation
+- [x] 5.3 Document result object patterns - Added section to README.md
+- [x] 5.4 Improve tTest equal variance handling - Always use Welch's t-test (removed parameter)
 
 ---
 
@@ -675,4 +675,5 @@ pf(2.5, 5, 10)       # Expected: 0.8979977,  Current: varies
 | 2026-01-21 | Claude Code Agent | 2.3.0-SNAPSHOT | **Fisher's Exact Test Suite & Contingency Package Complete** ✅: Created comprehensive test suite for Fisher's Exact Test (29 tests). Implementation was already complete (225 lines) using HypergeometricDistribution for exact p-value calculation. Tests cover two-sided and one-sided alternatives, odds ratio calculation with Haldane-Anscombe correction for zero cells, confidence intervals, Matrix and List inputs, validation, edge cases (zero cells, symmetric tables, extreme tables), and comparison with expected values. All tests passing. **Phase 3a COMPLETED**. **Contingency package: 6/6 classes (100%)**, Overall: 30/32 classes (94%). |
 | 2026-01-21 | Claude Code Agent | 2.3.0-SNAPSHOT | **DecisionTree Implementation Complete** ✅: Implemented CART (Classification and Regression Trees) algorithm for single-feature regression (591 lines, 29 tests). Uses variance reduction (MSE minimization) as splitting criterion. Features include: binary tree with configurable maxDepth and minSamplesLeaf, prediction at leaf nodes via mean of training samples, comprehensive metrics (R², MSE, RMSE, MAE), tree structure info (depth, leaf count), detailed summary() with tree rules. Supports both List and Matrix-based construction. All tests passing including step function perfect fit, linear approximation, constant Y, edge cases, validation, and extrapolation. **Regression package: 5/6 classes (83%)**, Overall: 31/32 classes (97%). |
 | 2026-01-22 | Claude Code Agent | 2.3.0-SNAPSHOT | **Phase 3d.1 Complete - Numerical Accuracy Improvement** ✅: **Replaced Apache Commons Math dependency with custom implementation** after discovering the original implementation already achieved 1e-10 precision or better. Restored self-contained SpecialFunctions.groovy with Lentz's continued fraction algorithm for regularized incomplete beta function and Lanczos approximation for log-gamma. Updated TDistribution and FDistribution to use custom implementation, eliminating dependency on deprecated Apache Commons Math library. All 602 tests passing with 1e-10 tolerance. Implementation is now dependency-free and maintains excellent numerical accuracy. Test files use Apache Commons Math only for reference value comparisons. Test command: `./gradlew :matrix-stats:test --tests "distribution.*"` |
+| 2026-01-22 | Claude Code Agent | 2.3.0-SNAPSHOT | **Phase 5 Complete - API Review & Enhancements** ✅: **(5.4) API Restructuring for backwards compatibility** - Created `ttest` package with Student (original behavior with equalVariance parameter) and Welch (simple API, always uses Welch's t-test) classes. Student moved from `se.alipsa.matrix.stats.Student` to `se.alipsa.matrix.stats.ttest.Student` (**breaking: package change only**). Welch class provides clean API: `Welch.tTest(List, List)` - no equalVariance parameter, always uses Welch's t-test (recommended, more robust). Student class preserves original API with equalVariance parameter (true=Student's t-test, false=Welch's t-test, null=auto-detect). Fixed Student's t-test implementation to use pooled variance formula (was incorrectly using Welch's t-statistic). **(5.2) Added comprehensive input validation** - Student: null/empty/insufficient observations checks for pairedTTest(), tTest() two-sample, tTest() one-sample. Welch: same validations. Correlation: validateCorrelationInputs() for all methods. **(5.1) Documented Sampler.groovy** - Explained random train/test splitting purpose. **(5.3) Documented result object patterns** - Added README section. All 607 tests passing (602 + 5 new Welch tests). |
 
