update documentation, roadmap for 2.3.0 now complete.

--- a/matrix-stats/v2.3.0-roadmap.md
+++ b/matrix-stats/v2.3.0-roadmap.md
@@ -466,12 +466,23 @@ pf(2.5, 5, 10)       # Expected: 0.8979977,  Current: varies
 - Consider a common Result interface if patterns emerge.
 - Ensure all result objects have useful `toString()` (Student.Result already has this).
 
-### 5.4 Improve `tTest` Equal Variance Handling
-**File**: `src/main/groovy/se/alipsa/matrix/stats/Student.groovy`
-**Issue**: The check for equal variance `(var1 - var2).abs() < 4` is a rule of thumb.
-**Recommendation**:
-- Default to Welch's t-test (which does not assume equal variances) by removing the `equalVariance` parameter and the conditional logic. This is the behavior of R's `t.test()` and is generally recommended.
-- If the ability to assume equal variance is desired, replace the rule of thumb with a more robust statistical test like Levene's test.
+### 5.4 Improve `tTest` Equal Variance Handling ✅ **COMPLETED**
+**Files**: `src/main/groovy/se/alipsa/matrix/stats/ttest/Student.groovy`, `TtestResult.groovy`, `Welch.groovy`
+
+**Original Issue**: The check for equal variance `(var1 - var2).abs() < 4` is a rule of thumb, and Student class mixed orthodox Student's t-test with Welch's t-test fallback.
+
+**Implementation**:
+1. **Created TtestResult base class** - New base class for two-sample t-test results in `ttest` package
+2. **Made Student.Result extend TtestResult** - Eliminates code duplication, maintains backwards compatibility
+3. **Updated Welch.tTest()** - Returns `TtestResult` instead of `Student.Result` for clearer API separation
+4. **Made Student orthodox** - `Student.tTest()` now **only** performs orthodox Student's t-test with pooled variance:
+   - `equalVariance=true`: Performs Student's t-test
+   - `equalVariance=false`: Throws exception directing user to `Welch.tTest()`
+   - `equalVariance=null`: Auto-detect, throws exception if |var1-var2| ≥ 4
+5. **Fixed documentation** - Corrected class-level JavaDoc to show orthodox Student's t-test formula (pooled variance) instead of Welch's formula
+6. **Updated README** - Documented the separation and exception behavior
+
+**Result**: Clean separation - Student is orthodox Student's t-test only, Welch is Welch's t-test only, with clear type hierarchy.
 
 ---
 
@@ -602,19 +613,19 @@ pf(2.5, 5, 10)       # Expected: 0.8979977,  Current: varies
 ### Phase 5: API Review & Enhancements ✅ **COMPLETED**
 - [x] 5.1 Review Sampler.groovy placement - Documented for ML train/test splitting
 - [x] 5.2 Standardize null/NaN handling - Added comprehensive validation to Student and Correlation
-- [x] 5.3 Document result object patterns - Added section to README.md
-- [x] 5.4 Improve tTest equal variance handling - Always use Welch's t-test (removed parameter)
+- [x] 5.3 Document result object patterns - Added section to README.md with TtestResult base class
+- [x] 5.4 Improve tTest equal variance handling - Made Student orthodox (throws exception on unequal variance), created TtestResult base class, clean API separation
 
 ---
 
 ## Success Criteria
 
 ### v2.3.0 Release Requirements
-- [ ] BigDecimal consistency achieved (Phase 1)
-- [ ] @CompileStatic on all classes
-- [ ] All existing tests passing: `./gradlew :matrix-stats:test`
-- [ ] No deprecation warnings
-- [ ] GroovyDoc complete for all public APIs
+- [x] BigDecimal consistency achieved (Phase 1)
+- [x] @CompileStatic on all classes
+- [x] All existing tests passing: `./gradlew :matrix-stats:test`
+- [x] No deprecation warnings
+- [x] GroovyDoc complete for all public APIs
 
 ### v2.4.0 Targets
 - [ ] Normalize.groovy refactored (Phase 2.1)
@@ -676,4 +687,6 @@ pf(2.5, 5, 10)       # Expected: 0.8979977,  Current: varies
 | 2026-01-21 | Claude Code Agent | 2.3.0-SNAPSHOT | **DecisionTree Implementation Complete** ✅: Implemented CART (Classification and Regression Trees) algorithm for single-feature regression (591 lines, 29 tests). Uses variance reduction (MSE minimization) as splitting criterion. Features include: binary tree with configurable maxDepth and minSamplesLeaf, prediction at leaf nodes via mean of training samples, comprehensive metrics (R², MSE, RMSE, MAE), tree structure info (depth, leaf count), detailed summary() with tree rules. Supports both List and Matrix-based construction. All tests passing including step function perfect fit, linear approximation, constant Y, edge cases, validation, and extrapolation. **Regression package: 5/6 classes (83%)**, Overall: 31/32 classes (97%). |
 | 2026-01-22 | Claude Code Agent | 2.3.0-SNAPSHOT | **Phase 3d.1 Complete - Numerical Accuracy Improvement** ✅: **Replaced Apache Commons Math dependency with custom implementation** after discovering the original implementation already achieved 1e-10 precision or better. Restored self-contained SpecialFunctions.groovy with Lentz's continued fraction algorithm for regularized incomplete beta function and Lanczos approximation for log-gamma. Updated TDistribution and FDistribution to use custom implementation, eliminating dependency on deprecated Apache Commons Math library. All 602 tests passing with 1e-10 tolerance. Implementation is now dependency-free and maintains excellent numerical accuracy. Test files use Apache Commons Math only for reference value comparisons. Test command: `./gradlew :matrix-stats:test --tests "distribution.*"` |
 | 2026-01-22 | Claude Code Agent | 2.3.0-SNAPSHOT | **Phase 5 Complete - API Review & Enhancements** ✅: **(5.4) API Restructuring for backwards compatibility** - Created `ttest` package with Student (original behavior with equalVariance parameter) and Welch (simple API, always uses Welch's t-test) classes. Student moved from `se.alipsa.matrix.stats.Student` to `se.alipsa.matrix.stats.ttest.Student` (**breaking: package change only**). Welch class provides clean API: `Welch.tTest(List, List)` - no equalVariance parameter, always uses Welch's t-test (recommended, more robust). Student class preserves original API with equalVariance parameter (true=Student's t-test, false=Welch's t-test, null=auto-detect). Fixed Student's t-test implementation to use pooled variance formula (was incorrectly using Welch's t-statistic). **(5.2) Added comprehensive input validation** - Student: null/empty/insufficient observations checks for pairedTTest(), tTest() two-sample, tTest() one-sample. Welch: same validations. Correlation: validateCorrelationInputs() for all methods. **(5.1) Documented Sampler.groovy** - Explained random train/test splitting purpose. **(5.3) Documented result object patterns** - Added README section. All 607 tests passing (602 + 5 new Welch tests). |
+| 2026-01-22 | Claude Code Agent | 2.3.0-SNAPSHOT | **T-Test API Refinement - Orthodox Implementation** ✅: **(1) Created TtestResult base class** - New `se.alipsa.matrix.stats.ttest.TtestResult` class serves as base for two-sample t-test results. Contains all properties (n1, n2, mean1, mean2, var1, var2, sd1, sd2, tVal, pVal, df, description) and methods (getters with optional decimal formatting, toString()). **(2) Updated Student.Result** - Now extends TtestResult, eliminating code duplication while maintaining full backwards compatibility. Existing code using Student.Result continues to work unchanged. **(3) Updated Welch.tTest()** - Now returns TtestResult instead of Student.Result, providing clearer API separation and semantic correctness. **(4) Made Student.tTest() orthodox** - Student's t-test now **only** performs orthodox Student's t-test with pooled variance. When `equalVariance=false`, throws `IllegalArgumentException` directing users to `Welch.tTest()`. When `equalVariance=null` (auto-detect), throws exception if variances differ significantly (|var1-var2| ≥ 4). Removed Welch fallback - Student class is now pure orthodox implementation requiring equal variance assumption. **(5) Fixed documentation** - Corrected class-level JavaDoc to show orthodox Student's t-test formula (pooled variance) instead of Welch's formula. Method-level JavaDoc clarifies exception behavior and cross-references Welch class. **(6) Updated tests** - Changed `Student.tTest(_, _, false)` calls to `Welch.tTest()`. Added 2 new tests: `testStudentRejectsUnequalVariance()` and `testStudentRejectsAutoDetectedUnequalVariance()`. Updated description assertions from "with equal variance" to simplified form. **(7) Updated README** - Clarified that Student requires equal variance assumption, documented exception behavior, updated examples. All 616 tests passing (614 + 2 new exception validation tests). **Result**: Clean separation - Student is orthodox Student's t-test only, Welch is Welch's t-test only, with clear type hierarchy and helpful error messages. |
+| 2026-01-22 | Claude Code Agent | 2.3.0-SNAPSHOT | **GroovyDoc Documentation Complete - 100% Coverage Achieved** ✅: Documented 28 high-priority classes across all packages to achieve 100% GroovyDoc coverage (53/53 files). **Documentation added**: (1) Core API - Correlation.groovy with comprehensive 60-line class documentation covering Pearson, Spearman, and Kendall tau correlations. (2) Contingency tests (4 files) - Barnard, Boschloo, CochranArmitage, CochranMantelHaenszel with definitions, when-to-use guidance, hypotheses, examples, and references. (3) Normality tests (5 files) - JarqueBera, KolmogorovSmirnov, KSquared, ShapiroWilk, ShapiroFrancia with advantages/disadvantages, test procedures, and usage examples. (4) Timeseries tests (8 files) - AdfGls, Ccm, Chow, Df, Granger, Johansen, TurningPoint, UnitRoot with econometric literature references. (5) Regression classes (3 files) - DecisionTree, LogisticRegression, QuantileRegression with mathematical formulations. (6) Cluster classes (4 files) - KMeans, KMeansPlusPlus, GroupEstimator, ClusteredPoint with key concepts (centroids, WCSS, convergence). (7) KDE classes (2 files) - Kernel, KernelDensity with kernel smoothness, support, efficiency documentation. (8) Utility class - Randomize.groovy with 99-line documentation on row shuffling and reproducibility. **Documentation pattern**: Each class includes What/When/Hypotheses/Examples/References sections with HTML formatting (<h3>, <ul>, <li>, <pre>, <dl>, <dt>, <dd>) and 3-5 academic citations. **Verification**: Created accurate_coverage_check.sh script confirming 100% coverage (53/53 files). All 616 tests passing. **v2.3.0 Success Criteria COMPLETE**: All 5 release requirements met (BigDecimal consistency, @CompileStatic annotations, tests passing, no deprecation warnings, GroovyDoc complete). |
 
