--- a/matrix-parquet/v0.4.0-roadmap.md
+++ b/matrix-parquet/v0.4.0-roadmap.md
@@ -72,11 +72,16 @@ Multiple magic string values were used throughout the code:
 5.1 [x] Create constants for Parquet schema field names
 5.2 [x] Create constant for metadata key `"matrix.columnTypes"`
 
-### 6. Add class-level documentation
-Both main classes lack class-level GroovyDoc comments.
+### 6. Add class-level documentation (COMPLETED)
+Both main classes lacked class-level GroovyDoc comments.
 
-6.1 [ ] Add class-level GroovyDoc to `MatrixParquetWriter` describing its purpose and usage
-6.2 [ ] Add class-level GroovyDoc to `MatrixParquetReader` describing its purpose and usage
+**Resolution:**
+- Added comprehensive GroovyDoc to `MatrixParquetWriter` covering usage examples, BigDecimal precision control, supported data types, and metadata
+- Added comprehensive GroovyDoc to `MatrixParquetReader` covering usage examples, type preservation, external file support, and limitations
+- Tests verified with `./gradlew :matrix-parquet:test`
+
+6.1 [x] Add class-level GroovyDoc to `MatrixParquetWriter` describing its purpose and usage
+6.2 [x] Add class-level GroovyDoc to `MatrixParquetReader` describing its purpose and usage
 
 ## Feature Enhancements
 
