--- a/matrix-parquet/v0.4.0-roadmap.md
+++ b/matrix-parquet/v0.4.0-roadmap.md
@@ -85,13 +85,21 @@ Both main classes lacked class-level GroovyDoc comments.
 
 ## Feature Enhancements
 
-### 7. Add timezone support for timestamps
-Currently all timestamps use `ZoneId.systemDefault()`, which can cause data loss when reading files written on systems with different timezones.
+### 7. Add timezone support for timestamps (COMPLETED)
+Previously all timestamps used `ZoneId.systemDefault()`, which could cause data loss when reading files written on systems with different timezones.
 
-7.1 [ ] Add optional timezone parameter to writer methods
-7.2 [ ] Add optional timezone parameter to reader methods
-7.3 [ ] Document timezone handling behavior in GroovyDoc
-7.4 [ ] Add test for timezone-aware timestamp handling
+**Resolution:**
+- Added `write(Matrix, File, ZoneId)` method to `MatrixParquetWriter`
+- Added `read(File, ZoneId)` and `read(File, String, ZoneId)` methods to `MatrixParquetReader`
+- Used thread-local pattern to pass timezone through call stack without changing internal method signatures
+- Updated class-level GroovyDoc with timezone handling examples
+- Added `testTimezoneHandling()` test verifying round-trip with different timezones and null validation
+- Tests verified with `./gradlew :matrix-parquet:test`
+
+7.1 [x] Add optional timezone parameter to writer methods
+7.2 [x] Add optional timezone parameter to reader methods
+7.3 [x] Document timezone handling behavior in GroovyDoc
+7.4 [x] Add test for timezone-aware timestamp handling
 
 ### 8. Improve error messages
 Error handling exists but messages could be more descriptive.
