--- a/matrix-parquet/v0.4.0-roadmap.md
+++ b/matrix-parquet/v0.4.0-roadmap.md
@@ -101,20 +101,37 @@ Previously all timestamps used `ZoneId.systemDefault()`, which could cause data 
 7.3 [x] Document timezone handling behavior in GroovyDoc
 7.4 [x] Add test for timezone-aware timestamp handling
 
-### 8. Improve error messages
-Error handling exists but messages could be more descriptive.
+### 8. Improve error messages (COMPLETED)
+Error handling existed but messages were not descriptive enough.
 
-8.1 [ ] Improve `IllegalArgumentException` message at line 530 (list field type error)
-8.2 [ ] Improve `IllegalArgumentException` message at line 548 (map field type error)
-8.3 [ ] Add descriptive error when precision overflow occurs during BigDecimal write
+**Resolution:**
+- Improved list field type error: now includes field name, expected type, actual type, and truncated value
+- Improved map field type error: now includes field name, expected type, actual type, and truncated value
+- Added explicit BigDecimal precision overflow check with descriptive message including value, field name, bytes required vs allowed, precision/scale, and suggestion to use `inferPrecisionAndScale=true`
+- Added `truncateForError()` helper method to prevent excessively long error messages
+- Updated `testMatrixParquetPrecisionOverflow` test to verify new error message
+- Tests verified with `./gradlew :matrix-parquet:test`
+
+8.1 [x] Improve `IllegalArgumentException` message for list field type error
+8.2 [x] Improve `IllegalArgumentException` message for map field type error
+8.3 [x] Add descriptive error when precision overflow occurs during BigDecimal write
 
 ## Performance Optimizations
 
-### 9. Cache reflection metadata for struct handling
-The `buildStructType()` method uses Introspector on every call without caching PropertyDescriptors, which can be slow for large matrices with complex objects.
+### 9. Cache reflection metadata for struct handling (COMPLETED)
+The `buildStructType()` method used Introspector on every call without caching PropertyDescriptors, which could be slow for large matrices with complex objects.
 
-9.1 [ ] Consider caching PropertyDescriptor results for repeated struct type inference
-9.2 [ ] Cache `Class.forName()` results during reading (line 97)
+**Resolution:**
+- Added `PROPERTY_DESCRIPTOR_CACHE` (ConcurrentHashMap) to `MatrixParquetWriter` for caching PropertyDescriptor lists by class
+- Added `getPropertyDescriptors(Class)` helper method that uses `computeIfAbsent` for thread-safe caching
+- Updated `buildStructType()` and `toStructMap()` to use cached PropertyDescriptors
+- Added `CLASS_CACHE` (ConcurrentHashMap) to `MatrixParquetReader` for caching Class.forName results
+- Added `getCachedClass(String)` helper method for thread-safe class caching
+- Updated `parseTypeString()` to use cached class lookups
+- Tests verified with `./gradlew :matrix-parquet:test`
+
+9.1 [x] Cache PropertyDescriptor results for repeated struct type inference
+9.2 [x] Cache `Class.forName()` results during reading
 
 ## Documentation Improvements
 
