--- a/matrix-parquet/v0.4.0-roadmap.md
+++ b/matrix-parquet/v0.4.0-roadmap.md
@@ -135,13 +135,29 @@ The `buildStructType()` method used Introspector on every call without caching P
 
 ## Documentation Improvements
 
-### 10. Document known limitations
-The readme.md could benefit from documenting edge cases and limitations.
+### 10. Document known limitations (COMPLETED)
+The readme.md needed documentation of edge cases and limitations.
 
-10.1 [ ] Document that Matrix is an in-memory structure (no streaming support)
-10.2 [ ] Document timezone handling behavior
-10.3 [ ] Document BigDecimal precision/scale requirements
-10.4 [ ] Document nested structure support and limitations
+**Resolution:**
+Completely rewrote `readme.md` to include:
+- Updated installation instructions (v0.4.0, Groovy 5.0.3)
+- Removed references to deprecated MatrixParquetIO
+- Added comprehensive "Supported Data Types" table with Parquet mappings
+- Added "BigDecimal Precision" section with three approaches and examples
+- Added "Nested Structures" section with examples and limitations
+- Added "Timezone Handling" section with examples
+- Added "Known Limitations" section covering:
+  - Memory usage (in-memory structure, RAM requirements, mitigation strategies)
+  - JDK compatibility (JDK 21 max due to Hadoop)
+  - Timestamp precision (microseconds for DateTime, milliseconds for Time)
+  - Type metadata behavior for external files
+- Added "Technical Notes" section on thread safety and performance tips
+- Updated 3rd party libraries table
+
+10.1 [x] Document that Matrix is an in-memory structure (no streaming support)
+10.2 [x] Document timezone handling behavior
+10.3 [x] Document BigDecimal precision/scale requirements
+10.4 [x] Document nested structure support and limitations
 
 ## Test Coverage Improvements
 
