--- a/matrix-parquet/v0.4.0-roadmap.md
+++ b/matrix-parquet/v0.4.0-roadmap.md
@@ -161,12 +161,12 @@ Completely rewrote `readme.md` to include:
 
 ## Test Coverage Improvements
 
-### 11. Add edge case tests
+### 11. Add edge case tests (COMPLETED)
 
-11.1 [ ] Add test for empty Matrix write/read round-trip
-11.2 [ ] Add test for Matrix with only null values in a column
-11.3 [ ] Add test for special characters in column names
-11.4 [ ] Add test for very large BigDecimal values (near precision limits)
+11.1 [x] Add test for empty Matrix write/read round-trip
+11.2 [x] Add test for Matrix with only null values in a column
+11.3 [x] Add test for special characters in column names
+11.4 [x] Add test for very large BigDecimal values (near precision limits)
 
 ## Priority Order
 
