- Added safeFileName that strips path separators, .. segments, and non‑safe characters, with a fallback to matrix.   - Applied it when composing the output filename for directory targets.

--- a/matrix-arff/v0.1.0-roadmap.md
+++ b/matrix-arff/v0.1.0-roadmap.md
@@ -11,7 +11,7 @@ The matrix-arff module currently supports File/Path/InputStream/URL reads and Fi
 ### 1. Input API alignment with matrix-csv/json/parquet
 matrix-csv and matrix-json expose File/Path/InputStream/Reader/URL plus string convenience overloads. matrix-parquet adds file-path and URL string convenience methods. matrix-arff is missing several of these and has limited validation.
 
-1.1 [x] Add reader overloads for `Reader`, `String` content, `readFromFile(String)`, and `readFromUrl(String)`
+1.1 [x] Add reader overloads for `Reader`, `String` content, `readFile(String)`, and `readUrl(String)`
 1.2 [x] Add validation for null inputs, missing files, and directory inputs (mirror matrix-parquet validation style)
 1.3 [x] Normalize default matrix name for File/Path/URL inputs to base name without extension (align with CSV/Parquet)
 1.4 [x] Document the expanded input support in module docs or class GroovyDoc
@@ -41,7 +41,7 @@ The writer and reader lack null/empty validations and have minor inconsistencies
 ### 5. Tests
 Ensure coverage for new inputs and edge cases.
 
-5.1 [x] Add tests for new input overloads (Reader, String content, readFromFile, readFromUrl)
+5.1 [x] Add tests for new input overloads (Reader, String content, readFile, readUrl)
 5.2 [x] Add tests for escaping/unescaping of attribute names and data values
 5.3 [x] Add tests for Long/BigInteger behavior
 5.4 [x] Run `./gradlew :matrix-arff:test`
