--- a/matrix-avro/v0.1.0-roadmap.md
+++ b/matrix-avro/v0.1.0-roadmap.md
@@ -10,12 +10,13 @@ This document outlines improvements and fixes needed to bring matrix-avro to fea
 - ✅ Comprehensive README documentation
 - ✅ Advanced type support (logical types, complex types)
 - ✅ Binary content support (byte[] read/write)
-- ✅ **NEW:** Input validation and error handling
-- ✅ **NEW:** Convenience methods (readFile, readUrl)
-- ✅ **NEW:** OutputStream support
-- ✅ **NEW:** Method-level GroovyDoc documentation
-- ⚠️ Some public methods still need GroovyDoc (Section 3.1)
-- ⚠️ Edge case tests not yet implemented (Section 6.2)
+- ✅ Input validation and error handling (Section 1) ✅
+- ✅ Convenience methods (readFile, readUrl) (Section 2.2) ✅
+- ✅ OutputStream support (Section 2.4) ✅
+- ✅ Method-level GroovyDoc documentation (Section 3.1) ✅
+- ⚠️ Private method documentation (Section 3.2) - LOW priority
+- ⚠️ Edge case tests (Section 6.2) - MEDIUM priority
+- ⚠️ Improved error messages (Section 5.2) - MEDIUM priority
 
 **Recent Progress:**
 - ✅ Added `read(byte[] content, String name)` to MatrixAvroReader
@@ -202,56 +203,37 @@ Add output stream support consistent with matrix-arff:
 
 ### 3.1 Add GroovyDoc to All Public Methods
 
-**Priority:** HIGH
+**Priority:** HIGH → ✅ **COMPLETED**
 
 Add comprehensive GroovyDoc consistent with matrix-csv patterns:
 
-**Reader methods to document:**
-- [ ] `read(File file, String name = null)`
-- [ ] `read(Path path, String name = null)`
-- [ ] `read(URL url, String name = null)`
-- [ ] `read(InputStream inputStream, String name = null)`
-- [ ] `readFile(String filePath)` (new)
-- [ ] `readUrl(String urlString)` (new)
-- [x] `read(byte[] content, String name = "AvroMatrix")` ✅ **COMPLETED**
+**Reader methods documented:**
+- [x] `read(File file, String name = null)` ✅
+- [x] `read(Path path)` ✅
+- [x] `read(URL url, String name = null)` ✅
+- [x] `read(InputStream input, String name = "AvroMatrix")` ✅
+- [x] `read(byte[] content, String name = "AvroMatrix")` ✅
+- [x] `readFile(String filePath)` ✅
+- [x] `readUrl(String urlString)` ✅
 
-**Writer methods to document:**
-- [ ] `write(Matrix matrix, File file, boolean inferPrecisionAndScale = false)`
-- [ ] `write(Matrix matrix, Path path, boolean inferPrecisionAndScale = false)`
-- [x] `writeBytes(Matrix matrix, boolean inferPrecisionAndScale = false)` ✅ **COMPLETED**
-- [ ] `write(Matrix matrix, OutputStream out, boolean inferPrecisionAndScale = false)` (new)
+**Writer methods documented:**
+- [x] `write(Matrix matrix, File file, boolean inferPrecisionAndScale = false)` ✅
+- [x] `write(Matrix matrix, Path path, boolean inferPrecisionAndScale = false)` ✅
+- [x] `write(Matrix matrix, OutputStream out, boolean inferPrecisionAndScale = false)` ✅
+- [x] `writeBytes(Matrix matrix, boolean inferPrecisionAndScale = false)` ✅
 
-**Documentation should include:**
-- Method purpose and behavior
-- Parameter descriptions with types
-- Return value description
-- Exceptions that may be thrown
-- Usage examples
-- Notes on resource management
-- See-also references to related methods
+**Documentation includes:**
+- ✅ Method purpose and behavior
+- ✅ Parameter descriptions with types
+- ✅ Return value description
+- ✅ Exceptions that may be thrown
+- ✅ Usage examples (in class-level doc)
+- ✅ Notes on resource management
+- ✅ See-also references to related methods
 
-**Example from CsvImporter:**
-```groovy
-/**
- * Import CSV data from a file using a specific format.
- *
- * @param file the file to read from (must exist and be a file, not a directory)
- * @param format the CSV format to use (CSV, EXCEL_CSV, or TSV)
- * @param firstRowAsColNames whether to treat the first row as column names
- * @return a Matrix containing the imported data
- * @throws IllegalArgumentException if file is null or is a directory
- * @throws FileNotFoundException if the file does not exist
- * @throws IOException if an I/O error occurs
- * @see #importCsv(Path, Format, boolean)
- */
-static Matrix importCsv(File file, Format format, boolean firstRowAsColNames = true) {
-  // implementation
-}
-```
-
-**Files to modify:**
-- `matrix-avro/src/main/groovy/se/alipsa/matrix/avro/MatrixAvroReader.groovy`
-- `matrix-avro/src/main/groovy/se/alipsa/matrix/avro/MatrixAvroWriter.groovy`
+**Files modified:**
+- ✅ `matrix-avro/src/main/groovy/se/alipsa/matrix/avro/MatrixAvroReader.groovy`
+- ✅ `matrix-avro/src/main/groovy/se/alipsa/matrix/avro/MatrixAvroWriter.groovy`
 
 ### 3.2 Add Private Method Documentation
 
@@ -428,13 +410,13 @@ Review and optimize schema building:
 
 ## Implementation Checklist
 
-### Phase 1: Critical Features (v0.1.0)
+### Phase 1: Critical Features (v0.1.0) ✅ **COMPLETE**
 
-- [x] 1.1 Add input validation to MatrixAvroReader ✅ **COMPLETED**
-- [x] 1.2 Add input validation to MatrixAvroWriter ✅ **COMPLETED**
-- [x] 2.2 Add convenience methods (readFile, readUrl) ✅ **COMPLETED**
-- [x] 3.1 Add GroovyDoc to all public methods ✅ **COMPLETED** (for validation-related methods)
-- [x] 6.1 Add validation tests ✅ **COMPLETED**
+- [x] 1.1 Add input validation to MatrixAvroReader ✅
+- [x] 1.2 Add input validation to MatrixAvroWriter ✅
+- [x] 2.2 Add convenience methods (readFile, readUrl) ✅
+- [x] 3.1 Add GroovyDoc to all public methods ✅
+- [x] 6.1 Add validation tests ✅
 
 **Test commands:**
 ```bash
@@ -583,7 +565,10 @@ Features deferred beyond v1.0.0:
 - Section 2.2: Convenience methods (readFile, readUrl) ✅
 - Section 2.3: Byte array output (writeBytes) ✅
 - Section 2.4: OutputStream support ✅
+- Section 3.1: GroovyDoc for all public methods ✅
 - Section 6.1: Validation tests ✅
+
+**Phase 1 (v0.1.0) Status:** ✅ **COMPLETE** - All critical features implemented
 
 ---
 
