--- a/matrix-avro/v0.1.0-roadmap.md
+++ b/matrix-avro/v0.1.0-roadmap.md
@@ -14,7 +14,7 @@ This document outlines improvements and fixes needed to bring matrix-avro to fea
 - ✅ Convenience methods (readFile, readUrl) (Section 2.2) ✅
 - ✅ OutputStream support (Section 2.4) ✅
 - ✅ Method-level GroovyDoc documentation (Section 3.1) ✅
-- ⚠️ Private method documentation (Section 3.2) - LOW priority
+- ✅ Private method documentation (Section 3.2) ✅
 - ⚠️ Edge case tests (Section 6.2) - MEDIUM priority
 - ⚠️ Improved error messages (Section 5.2) - MEDIUM priority
 
@@ -237,18 +237,39 @@ Add comprehensive GroovyDoc consistent with matrix-csv patterns:
 
 ### 3.2 Add Private Method Documentation
 
-**Priority:** LOW
+**Priority:** LOW → ✅ **COMPLETED**
 
 Add JavaDoc/GroovyDoc to complex private helper methods:
 
-- [ ] Document `convertAvroValueToJava` in reader
-- [ ] Document `buildSchema` in writer
-- [ ] Document `inferSchema` in writer
-- [ ] Document type conversion helpers
+**Reader methods documented:**
+- [x] `convertValue` - Avro to Java type conversion
+- [x] `byteBufferToArray` - ByteBuffer to byte[] conversion
+- [x] `toLocalDate` - Avro date to LocalDate
+- [x] `toLocalTimeMillis` - Avro time-millis to LocalTime
+- [x] `toLocalTimeMicros` - Avro time-micros to LocalTime
+- [x] `toInstantMillis` - Avro timestamp-millis to Instant
+- [x] `toInstantMicros` - Avro timestamp-micros to Instant
+- [x] `toLocalDateTimeMillis` - Avro local-timestamp-millis to LocalDateTime
+- [x] `toLocalDateTimeMicros` - Avro local-timestamp-micros to LocalDateTime
+- [x] `toBigDecimal` - Avro decimal to BigDecimal
 
-**Files to modify:**
-- `matrix-avro/src/main/groovy/se/alipsa/matrix/avro/MatrixAvroReader.groovy`
-- `matrix-avro/src/main/groovy/se/alipsa/matrix/avro/MatrixAvroWriter.groovy`
+**Writer methods documented:**
+- [x] `buildSchema` - Matrix to Avro schema generation
+- [x] `toFieldSchema` - Java class to Avro schema mapping
+- [x] `inferDecimalPrecisionAndScale` - BigDecimal precision/scale inference
+- [x] `writeRows` - Row writing to Avro
+- [x] `toAvroValue` - Java to Avro type conversion
+- [x] `effectiveTypeForColumn` - Column type inference
+- [x] `isRecordLikeColumn` - Map vs Record encoding decision
+- [x] `inferListElemClass` - List element type inference
+- [x] `inferMapValueClass` - Map value type inference
+- [x] `isCompatible` - Union branch compatibility check
+
+**Files modified:**
+- ✅ `matrix-avro/src/main/groovy/se/alipsa/matrix/avro/MatrixAvroReader.groovy`
+- ✅ `matrix-avro/src/main/groovy/se/alipsa/matrix/avro/MatrixAvroWriter.groovy`
+
+**Test results:** ✅ All 34 tests passing
 
 ---
 
@@ -448,7 +469,7 @@ Review and optimize schema building:
 
 ### Phase 3: Advanced Features (v0.3.0)
 
-- [ ] 3.2 Add private method documentation
+- [x] 3.2 Add private method documentation ✅ **COMPLETED**
 - [ ] 4.1 Add reader configuration options
 - [ ] 4.2 Add writer configuration options
 - [ ] 5.1 Add custom exceptions
@@ -566,9 +587,12 @@ Features deferred beyond v1.0.0:
 - Section 2.3: Byte array output (writeBytes) ✅
 - Section 2.4: OutputStream support ✅
 - Section 3.1: GroovyDoc for all public methods ✅
+- Section 3.2: GroovyDoc for private methods ✅
 - Section 6.1: Validation tests ✅
 
 **Phase 1 (v0.1.0) Status:** ✅ **COMPLETE** - All critical features implemented
+**Phase 2 (v0.2.0) Status:** ✅ **COMPLETE** - API completeness achieved
+**Phase 3 (Documentation):** ✅ **COMPLETE** - All methods documented
 
 ---
 
