--- a/matrix-avro/v0.1.0-roadmap.md
+++ b/matrix-avro/v0.1.0-roadmap.md
@@ -6,7 +6,7 @@ This document outlines improvements and fixes needed to bring matrix-avro to fea
 
 **Current Status (Updated 2026-01-23):**
 - ✅ Core functionality implemented (read/write Avro OCF)
-- ✅ Excellent test coverage (46 tests passing)
+- ✅ Excellent test coverage (56 tests passing)
 - ✅ Comprehensive README documentation
 - ✅ Advanced type support (logical types, complex types)
 - ✅ Binary content support (byte[] read/write)
@@ -17,7 +17,7 @@ This document outlines improvements and fixes needed to bring matrix-avro to fea
 - ✅ Private method documentation (Section 3.2) ✅
 - ✅ Configuration options (Section 4) ✅
 - ⚠️ Edge case tests (Section 6.2) - MEDIUM priority
-- ⚠️ Improved error messages (Section 5.2) - MEDIUM priority
+- ✅ Improved error messages (Section 5.2) ✅
 
 **Recent Progress:**
 - ✅ Added `read(byte[] content, String name)` to MatrixAvroReader
@@ -30,7 +30,7 @@ This document outlines improvements and fixes needed to bring matrix-avro to fea
 - ✅ Added `AvroReadOptions` class with matrixName, readerSchema, lenientTypeConversion
 - ✅ Added `AvroWriteOptions` class with compression, namespace, schemaName, syncInterval
 - ✅ Added overloaded read/write methods accepting options classes
-- ✅ All 46 tests passing
+- ✅ All 56 tests passing
 
 ---
 
@@ -273,7 +273,7 @@ Add JavaDoc/GroovyDoc to complex private helper methods:
 - ✅ `matrix-avro/src/main/groovy/se/alipsa/matrix/avro/MatrixAvroReader.groovy`
 - ✅ `matrix-avro/src/main/groovy/se/alipsa/matrix/avro/MatrixAvroWriter.groovy`
 
-**Test results:** ✅ All 34 tests passing
+**Test results:** ✅ All 56 tests passing
 
 ---
 
@@ -366,7 +366,7 @@ MatrixAvroWriter.write(matrix, file, options)
 ./gradlew :matrix-avro:test --tests "MatrixAvroWriterTest.testWriteWithDeflateCompression"
 ```
 
-**Test results:** ✅ All 46 tests passing
+**Test results:** ✅ All 56 tests passing
 
 ---
 
@@ -374,27 +374,46 @@ MatrixAvroWriter.write(matrix, file, options)
 
 ### 5.1 Add Custom Exceptions
 
-**Priority:** LOW
+**Priority:** LOW → ✅ **COMPLETED**
 
-Consider custom exception types for better error handling:
+Custom exception types for better error handling:
 
-- [ ] `AvroSchemaException` - schema-related errors
-- [ ] `AvroConversionException` - type conversion errors
-- [ ] `AvroValidationException` - validation errors
+- [x] `AvroSchemaException` - schema-related errors
+- [x] `AvroConversionException` - type conversion errors
+- [x] `AvroValidationException` - validation errors
 
-**Files to create:**
-- `matrix-avro/src/main/groovy/se/alipsa/matrix/avro/exceptions/`
+**Files created:**
+- ✅ `matrix-avro/src/main/groovy/se/alipsa/matrix/avro/exceptions/AvroSchemaException.groovy`
+- ✅ `matrix-avro/src/main/groovy/se/alipsa/matrix/avro/exceptions/AvroConversionException.groovy`
+- ✅ `matrix-avro/src/main/groovy/se/alipsa/matrix/avro/exceptions/AvroValidationException.groovy`
+
+**Files modified:**
+- ✅ `matrix-avro/src/main/groovy/se/alipsa/matrix/avro/MatrixAvroReader.groovy`
+- ✅ `matrix-avro/src/main/groovy/se/alipsa/matrix/avro/MatrixAvroWriter.groovy`
+- ✅ `matrix-avro/src/test/groovy/test/alipsa/matrix/avro/MatrixAvroReaderTest.groovy`
+- ✅ `matrix-avro/src/test/groovy/test/alipsa/matrix/avro/MatrixAvroWriterTest.groovy`
+
+**Notes:**
+- `AvroConversionException` includes column name, row number, source/target types, and value.
+- `AvroValidationException` includes parameter name, row number (when applicable), and suggestion.
 
 ### 5.2 Improve Error Messages
 
-**Priority:** MEDIUM
+**Priority:** MEDIUM → ✅ **COMPLETED**
 
 Add contextual error messages:
 
-- [ ] Include column names in conversion errors
-- [ ] Include row numbers in validation errors
-- [ ] Include expected vs actual types in schema errors
-- [ ] Add helpful suggestions in error messages
+- [x] Include column names in conversion errors
+- [x] Include row numbers in conversion errors
+- [x] Include source vs target type information in conversion errors
+- [x] Add helpful suggestions in validation errors
+- [x] Include row numbers in validation errors (row-aware validation paths)
+- [x] Include expected vs actual types in schema errors (wire AvroSchemaException into schema conflicts)
+
+**Tests added:**
+- `AvroExceptionTest` - validates conversion/schema exception context formatting
+- `MatrixAvroWriterTest.testSchemaExceptionForTypeMismatch` - schema mismatch surface area
+- `MatrixAvroWriterTest.testValidationExceptionForColumnSizeMismatch` - validation row context
 
 **Files to modify:**
 - `matrix-avro/src/main/groovy/se/alipsa/matrix/avro/MatrixAvroReader.groovy`
@@ -493,14 +512,14 @@ Review and optimize schema building:
 ./gradlew :matrix-avro:build
 ```
 
-**Test results:** ✅ All 34 tests passing
+**Test results:** ✅ All 56 tests passing
 
 ### Phase 2: API Completeness (v0.2.0)
 
 - [x] 2.1 Add binary content parsing ✅ **COMPLETED**
 - [x] 2.3 Add byte array output (writeBytes) ✅ **COMPLETED**
 - [x] 2.4 Add OutputStream support ✅ **COMPLETED**
-- [ ] 5.2 Improve error messages
+- [x] 5.2 Improve error messages ✅
 - [ ] 6.2 Add edge case tests
 
 **Test commands:**
@@ -513,14 +532,14 @@ Review and optimize schema building:
 - ✅ Added `read(byte[] content, String name)` to MatrixAvroReader
 - ✅ Added `writeBytes(Matrix matrix, boolean inferPrecisionAndScale)` to MatrixAvroWriter
 - ✅ Added `write(Matrix matrix, OutputStream out, boolean inferPrecisionAndScale)` to MatrixAvroWriter
-- ✅ Added 21 new tests (total 34 tests now passing)
+- ✅ Added 21 new tests (total 56 tests now passing)
 
 ### Phase 3: Advanced Features (v0.3.0) ✅ **COMPLETE**
 
 - [x] 3.2 Add private method documentation ✅
 - [x] 4.1 Add reader configuration options ✅
 - [x] 4.2 Add writer configuration options ✅
-- [ ] 5.1 Add custom exceptions (deferred - not needed for v0.1.0)
+- [x] 5.1 Add custom exceptions ✅
 
 **Test commands:**
 ```bash
@@ -528,7 +547,7 @@ Review and optimize schema building:
 ./gradlew test
 ```
 
-**Test results:** ✅ All 46 tests passing
+**Test results:** ✅ All 56 tests passing
 
 ### Phase 4: Performance (v1.0.0)
 
@@ -630,7 +649,7 @@ Features deferred beyond v1.0.0:
 - `MatrixAvroWriter.writeBytes(Matrix, boolean)` - Write Matrix to byte array
 
 **Status:**
-- ✅ All 46 tests passing
+- ✅ All 56 tests passing
 - ✅ Configuration options complete
 - ✅ Input validation complete
 - ✅ Documentation complete
@@ -647,6 +666,8 @@ Features deferred beyond v1.0.0:
 - Section 3.2: GroovyDoc for private methods ✅
 - Section 4.1: Reader configuration options (AvroReadOptions) ✅
 - Section 4.2: Writer configuration options (AvroWriteOptions) ✅
+- Section 5.1: Custom exceptions ✅
+- Section 5.2: Improved error messages ✅
 - Section 6.1: Validation tests ✅
 
 **Phase 1 (v0.1.0) Status:** ✅ **COMPLETE** - All critical features implemented
